[package]
name = "jsonpath_lib"
version = "0.2.3"
authors = ["Changseok Han <freestrings@gmail.com>"]

description = "It is JsonPath engine written in Rust. it provide a similar API interface in Webassembly and Javascript too. - Webassembly Demo: https://freestrings.github.io/jsonpath"
readme = "README.md"

keywords = ["jsonpath", "json", "webassembly", "nodejs", "query"]

repository = "https://github.com/freestrings/jsonpath"
documentation = "https://docs.rs/jsonpath_lib/0.1.0/jsonpath_lib"
license = "MIT"

categories = ["parsing"]

[badges]
travis-ci = { repository = "freestrings/jsonpath", branch = "master" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk", rev = "v1.1.0" }

[dependencies]
# log = "0.4"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = { version = "1.0", features = ["preserve_order"] }
# env_logger = "0.6"
# array_tool = "1.0.3"

log = { git = "https://github.com/mesalock-linux/log-sgx" }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx", features = ["preserve_order"] }
env_logger = { git = "https://github.com/mesalock-linux/env_logger-sgx" }
array_tool = { git = "https://github.com/mesalock-linux/array_tool-sgx" }

[lib]
name = "jsonpath_lib"
path = "src/lib.rs"
crate-type = ["rlib"]

[profile.release]
#debug = true
#lto = false